# kkhobbies

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250824215638_v2_1_additions.py  5011b8fb9219_add_config_json_to_hobby_table.py  e57a1c1a5dbf_initial.py
apps/api/app/: cli.py  main.py
apps/api/app/auth/: __init__.py  deps.py  jwt.py  password.py
apps/api/app/db/: __init__.py  fts.py  session.py
apps/api/app/models/: __init__.py  base.py  entry.py  entry_media.py  entry_prop.py  entry_tag.py  hobby.py  hobby_type.py  user.py
apps/api/app/routers/: __init__.py  auth.py  entries.py  export.py  hobbies.py  hobby_types.py  search.py  users.py
apps/api/app/schemas/: __init__.py  common.py  entry.py  entry_media.py  entry_prop.py  hobby.py  hobby_type.py  search.py  user.py
apps/api/app/services/: __init__.py  entry_validation.py  hobby_tree.py  schema_validation.py  tags.py  uploads.py
apps/api/app/utils/: __init__.py  file_utils.py
apps/api/tests/: conftest.py  test_auth.py  test_entries.py  test_hobby_types.py  test_main.py  test_search.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/entries/: page.tsx
apps/web/app/providers/: I18nProvider.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: Sidebar.tsx  dashboard.tsx
apps/web/i18n/: tr.json
apps/web/tests/: smoke.spec.ts
(+9 files in other folders)
